   * theme chooser window added to preference graphics dialog
   * fix broken colour wait cursor on Mac OS X (#4729)
   * clicking on unit portrait in status pane now centers on unit (#3388)
   * show numbers of each enemy which can reach tiles in "Show Enemy Moves"
   * don't show "The End" after viewing a won multiplayer replay (#4166)
 * graphics
   * units can now have colors redefined to match team colors
   * team color can be defined in the side tag with "team_rgb=r,g,b"
   * new title screen and logo
   * changed the storm trident attack icon from fireball to lightingbolt
   * new attack icon for the fireball
   * portraits:
     * new portraits: Li'sar, Drake Burner, Drake Fighter, Drake Glider, 
       Elvish Shaman, Ghoul, Mermaid Initiate, Merman Fighter, Merman Hunter, 
       Naga Fighter, Orcish Assassin, Saurian Skirmisher
     * all Drake, Merman, Naga and Saurian upgrades now use level one portraits
     * Necrophage and Orcish Slayer upgrades now use level one portraits
   * new images: Konrad level 1, Tentacle of the Deep
   * new death animations: Initiate, Mage, Pikeman, Red Mage, White Mage,
     Tentacle of the Deep
   * removed deprecated death animation: Drake Fighter
   * new tiles: swamp, cave wall, paved road, variable-width canyon (#8817)
   * new villages: snow (human & elven), underground
   * Updated snow hills and hills
 * language and i18n:
   * added support for right-to-left languages (patch #470)
   * made the list of languages configurable via the locale WML
   * updated manual: English, German, Swedish
   * updated man pages: Swedish
   * new translations: Hebrew, Portugese
   * updated translations: Afrikaans, British English, Chinese, French, German,
     Hungarian, Italian, Japanese, Polish, Portuguese (Brazil), Russian, Slovak,
     Slovenian, Spanish, Swedish, Turkish
   * tutorial now has its own textdomain
   * fixed Undead used as both trait and race name (#4295)